Stop the background switch from bleeding through on slower devices

--- a/demo/sass/_theme_dark.scss
+++ b/demo/sass/_theme_dark.scss
@@ -3,7 +3,7 @@ $highlight-color: saturate($yellow-02, 25%);
 $background-color: #101010;
 
 .dark {
-  background-color: $background-color;
+  background: $background-color;
   color: $base-05;
 
   ::-moz-selection {
